pkgs/typed-racket-pkgs/typed-racket-test/tests/typed-racket/fail/define-zero-values.rkt
#lang typed/racket

(define-values () (+ 1 "x"))
